--- a/fraud.ipynb
+++ b/fraud.ipynb
@@ -1842,7 +1842,9 @@
    },
    "source": [
     "## Data Prediction\n",
-    "Using Logistic Regression model, The features variables will be V1 to V28 and Amount columns while the target variable is Class (Fraud/Non-Fraud). I excluded Time from feature variables as it is in the format of sequence, not timestamp, and hence, not meaningful for fraud detection."
+    "Using Logistic Regression model, The features variables will be V1 to V28 and Amount columns while the target variable is Class (Fraud/Non-Fraud). I excluded Time from feature variables as it is in the format of sequence, not timestamp, and hence, not meaningful for fraud detection.\n",
+    "\n",
+    "##### Due to the capability of our device, we can only afford this number of maximum iterations"
    ]
   },
   {
